[package]
name = "rust-virtual-orb-poc"
version = "0.1.0"
edition = "2021"


[dependencies]
clap = { version = "4.3.8", features = ["derive"] }
clap-duration = "0.1.11"
rand = "0.8.5"
tokio = { version = "1.28.2", features = ["full"] }
log = "0.4"
simple_logger = "1.3"
reqwest = { version ="0.11.18", features = ["json",] }
serde = { version = "1.0.164", features = ["derive"] }
ulid = "1.0.0"
base64 = "0.21.2"
rocket = {version = "0.5.0-rc.3", features = ["json"]}